# cdn-systems-challenge

./: Cargo.toml  README.md  typos.toml
.github/workflows/: ci-cd.yaml  release.yaml  test.yaml
src/: barrier.rs  error.rs  main.rs  position.rs  repairman.rs  world.rs
