[package]
name = "cdn-systems-challenge"
version = "0.1.0"
edition = "2021"
authors = ["Mahor Foruzesh <mahorforuzesh@gmail.com>"]

[dependencies]
crossterm = "0.27.0"
ndarray = "0.15.6"
owo-colors = "4.0.0"
pathfinding = "4.9.1"
rand = "0.8.5"

[profile.release]
lto = true
strip = true
codegen-units = 1

[profile.ci]
inherits = "dev"
incremental = false
debug = false

[profile.perf]
inherits = "release"
strip = false
debug = 1
